# ChangeLog for www-client/opera
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.56 2006/08/09 00:46:17 jer Exp $

  09 Aug 2006; Jeroen Roovers <jer@gentoo.org> -opera-8.51.ebuild,
  -opera-8.52.ebuild:
  Cleaning up old versions (bug #140558).

*opera-9.01 (09 Aug 2006)

  09 Aug 2006; Jeroen Roovers <jer@gentoo.org> +opera-9.01.ebuild:
  Version bump, bug #142548.

  05 Jul 2006; Joshua Jackson <tsunam@gentoo.org> opera-9.00.ebuild:
  stable x86; bug #137634

  03 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org> opera-9.00.ebuild:
  Stable on sparc wrt security #137634

  03 Jul 2006; Thomas Cort <tcort@gentoo.org> opera-9.00.ebuild:
  Stable on amd64 wrt security Bug #137634.

  01 Jul 2006; Lars Weiler <pylon@gentoo.org> opera-9.00.ebuild:
  Stable on ppc; security bug #137634.

  01 Jul 2006; Carsten Lohrke <carlo@gentoo.org> opera-9.00.ebuild:
  Restore previous ebuild.

  30 Jun 2006; Carsten Lohrke <carlo@gentoo.org>
  files/opera-9.00-install.patch, opera-9.00.ebuild:
  Version bump. Bug #137634.

*opera-9.00 (25 Jun 2006)

  25 Jun 2006; Thomas Matthijs <axxo@gentoo.org>
  +files/opera-9.00-install.patch, +opera-9.00.ebuild:
  version bump

  24 Jun 2006; Doug Goldstein <cardoe@gentoo.org> opera-8.51.ebuild,
  opera-8.52.ebuild:
  USE flag qt->qt3/qt4 change bug #137785

  31 May 2006; Thomas Cort <tcort@gentoo.org> opera-8.54.ebuild:
  Stable on amd64 wrt security Bug #129800.

  30 May 2006; Gustavo Zacarias <gustavoz@gentoo.org> opera-8.54.ebuild:
  Stable on sparc

*opera-9.00_pre2 (30 May 2006)

  30 May 2006; Thomas Matthijs <axxo@gentoo.org>
  +files/opera-9.00_pre2-install.patch, +opera-9.00_pre2.ebuild:
  opera 9 beta ebuild from 122036

  30 May 2006; Thomas Matthijs <axxo@gentoo.org>
  +files/opera-8.54-install.patch, opera-8.54.ebuild:
  Fix(hopefully) bug 114302, 134422, 134368. Thanks too Jakub Moc, Paul
  Varner, Frank Richter
