@@ -38,22 +38,22 @@ EBUILD opera-8.54.ebuild 4737 RMD160 7e5575f39eb741e9cd8b340b45e1c35295aeeba8 SH
 MD5 6add0566d3e8d5d140e4de7d9055ba36 opera-8.54.ebuild 4737
 RMD160 7e5575f39eb741e9cd8b340b45e1c35295aeeba8 opera-8.54.ebuild 4737
 SHA256 21c11036ed1695cfbfd47dbd9e582278d676316763e0935eb621d04f039cf212 opera-8.54.ebuild 4737
-EBUILD opera-9.00.ebuild 4401 RMD160 a7afb61791e74b72bcdcf1399dbe5611709882b7 SHA1 4d5b514b45de4dd8a29d3dc2a4e6c4ebefc8a511 SHA256 9a87518e8274cca414ff631253ff6f3992d116a553c8ec32c653255162848de9
-MD5 60cd1cad968e2575a2b408bd5d24599b opera-9.00.ebuild 4401
-RMD160 a7afb61791e74b72bcdcf1399dbe5611709882b7 opera-9.00.ebuild 4401
-SHA256 9a87518e8274cca414ff631253ff6f3992d116a553c8ec32c653255162848de9 opera-9.00.ebuild 4401
-EBUILD opera-9.00_pre2.ebuild 4473 RMD160 d89318a2ac522236c713c6b1936b74246e78d969 SHA1 7892f26b73931a1505c55ae613b63e508c5ff5b8 SHA256 e5d532c1d696ddadc6675493e27bc7eaa7da8bf9fc5b8f19010163ad9966052f
-MD5 03b82ef0cfbd1748b5610562c6f3e32e opera-9.00_pre2.ebuild 4473
-RMD160 d89318a2ac522236c713c6b1936b74246e78d969 opera-9.00_pre2.ebuild 4473
-SHA256 e5d532c1d696ddadc6675493e27bc7eaa7da8bf9fc5b8f19010163ad9966052f opera-9.00_pre2.ebuild 4473
-EBUILD opera-9.01.ebuild 4444 RMD160 8d6a66df25b589279b1ae1808085083bef755942 SHA1 490951fe8aaa2a4b32ec102cdb9187d11fa7c5a9 SHA256 03f2436d76c38204284c2db6b8683805ab685a25b0fa65c14db97a33fe213b2b
-MD5 19f409499db78de828e203d7f18e5ad8 opera-9.01.ebuild 4444
-RMD160 8d6a66df25b589279b1ae1808085083bef755942 opera-9.01.ebuild 4444
-SHA256 03f2436d76c38204284c2db6b8683805ab685a25b0fa65c14db97a33fe213b2b opera-9.01.ebuild 4444
-MISC ChangeLog 21784 RMD160 dfebf42438a50727b5ebd4c04d632c219c9919ab SHA1 c87509f27a2a5803196add0eebba43a54bc57a33 SHA256 483a362deb72bc257a16e9cd44c1ddb1f6e8dd038258ad64f5cde942e3e6a62c
-MD5 014eca0a1529637a5a4815c497a38ff7 ChangeLog 21784
-RMD160 dfebf42438a50727b5ebd4c04d632c219c9919ab ChangeLog 21784
-SHA256 483a362deb72bc257a16e9cd44c1ddb1f6e8dd038258ad64f5cde942e3e6a62c ChangeLog 21784
+EBUILD opera-9.00.ebuild 4387 RMD160 23b8367432f0a068a0a022e5e4db5981d154133f SHA1 f483767f8ae175d18a3374a910b046247fef9265 SHA256 251a0e015d7b0f3bfb16e5188a2f4b0848b5b97b649e33ca5dd7f07c7bb64c5c
+MD5 427285a688bcc904312b8aea3a5212e6 opera-9.00.ebuild 4387
+RMD160 23b8367432f0a068a0a022e5e4db5981d154133f opera-9.00.ebuild 4387
+SHA256 251a0e015d7b0f3bfb16e5188a2f4b0848b5b97b649e33ca5dd7f07c7bb64c5c opera-9.00.ebuild 4387
+EBUILD opera-9.00_pre2.ebuild 4461 RMD160 34a90beaa4f7bbe017a6b63ad34960f1222c1e19 SHA1 15c57e2f9087842e14b97ba5dc7129a8af752034 SHA256 62f4447804de2bfe2b08abc341874eb5941ab9176f90a147c656a8b56d7afeb6
+MD5 cc07a33be3697def9ee651bd7306d73f opera-9.00_pre2.ebuild 4461
+RMD160 34a90beaa4f7bbe017a6b63ad34960f1222c1e19 opera-9.00_pre2.ebuild 4461
+SHA256 62f4447804de2bfe2b08abc341874eb5941ab9176f90a147c656a8b56d7afeb6 opera-9.00_pre2.ebuild 4461
+EBUILD opera-9.01.ebuild 4433 RMD160 44ffd33b16689a82669c2114f76b66e95fc74e6c SHA1 47714dcefb0a238e7aef4e47784fae230cc24867 SHA256 359a3eccddfd40ff6d66ef0de4ffbe990c6b75b46dbd709a2f90c7ada988d996
+MD5 19371eec95870144a3c1bb6122d549d6 opera-9.01.ebuild 4433
+RMD160 44ffd33b16689a82669c2114f76b66e95fc74e6c opera-9.01.ebuild 4433
+SHA256 359a3eccddfd40ff6d66ef0de4ffbe990c6b75b46dbd709a2f90c7ada988d996 opera-9.01.ebuild 4433
+MISC ChangeLog 21923 RMD160 e5c8869191a7b8c035d58e9bf08746d9e1165ca4 SHA1 c1b2fc418153512ef3226cc329cee0352a63d0fc SHA256 8fe6eb2f350e5e1bda308e2feef519d29a5a91a7c0b8c2c6781b573a311e25ca
+MD5 f5f42913a178625e392fe4474fb9ea56 ChangeLog 21923
+RMD160 e5c8869191a7b8c035d58e9bf08746d9e1165ca4 ChangeLog 21923
+SHA256 8fe6eb2f350e5e1bda308e2feef519d29a5a91a7c0b8c2c6781b573a311e25ca ChangeLog 21923
 MISC metadata.xml 220 RMD160 7ff7ad4c6e8d172bcfc712cdea261e851838129c SHA1 0718289f296f6229a8833cf44f48cc0f683b682b SHA256 4e10c895f4654efa60587dd3c2febe6c18471fbf752cde4a12fbe884b3cfa287
 MD5 db97f8b4a8ea79d4f2660a1fdb6d4a01 metadata.xml 220
 RMD160 7ff7ad4c6e8d172bcfc712cdea261e851838129c metadata.xml 220
