@@ -1,6 +1,10 @@
 # ChangeLog for www-client/opera
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.56 2006/08/09 00:46:17 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.57 2006/08/19 00:21:12 jer Exp $
+
+  19 Aug 2006; Jeroen Roovers <jer@gentoo.org> opera-9.00_pre2.ebuild,
+  opera-9.00.ebuild, opera-9.01.ebuild:
+  Removed debugging stuff.
 
   09 Aug 2006; Jeroen Roovers <jer@gentoo.org> -opera-8.51.ebuild,
   -opera-8.52.ebuild:
